# launcher

./: .gitignore  FFLauncher-macx.ui  FFLauncher-win32.ui  FFLauncher.pro  README.md  resources-macx.qrc  resources-win32.qrc
assets/: icon.icns
dependencies/bsdiff/: README.md  blocksort.c  libbz2-static.lib  libbz2.lib
dependencies/bzip2/: CMakeLists.txt  README.md  libbz2-win32-x86-64.lib  libbz2-win32-x86.lib
dependencies/openssl/: README.md
deployment/win32/: launcher-win32-setup.nsi
deployment/win64/: launcher-win64-setup.nsi
src/core/: Constants.h  Localizer.h  main.cpp
src/game/: GameProcess.cpp  GameProcess.h
src/ui/: FramelessWindow.cpp  FramelessWindow.h  FramelessWindow.mm  LauncherWindow.cpp  LauncherWindow.h
src/updater/: Updater.cpp  Updater.h
